# Gamw

./: .gitignore  CMakeLists.txt  Gamw  README.md
include/: Game.h  GameBox.h  GameState.h  Menu.h  MenuItem.h
src/: GameBox.cpp  Menu.cpp  main.cpp
